<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.details.DescriptionFragment">

    <TextView
        android:id="@+id/release_date_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/release_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/release_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/date_txt"
        app:layout_constraintStart_toEndOf="@+id/release_date_header"
        app:layout_constraintBottom_toBottomOf="@id/release_date_header"/>


    <TextView
        android:id="@+id/runtime_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/runtime"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/release_date_header" />

    <TextView
        android:id="@+id/runtime_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/date_txt"
        app:layout_constraintStart_toEndOf="@+id/runtime_header"
        app:layout_constraintBottom_toBottomOf="@id/runtime_header"/>


    <TextView
        android:id="@+id/rating_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/rating_header"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/runtime_header" />

    <TextView
        android:id="@+id/rating_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/date_txt"
        app:layout_constraintStart_toEndOf="@+id/rating_header"
        app:layout_constraintBottom_toBottomOf="@id/rating_header"/>

    <TextView
        android:id="@+id/overview_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/overview"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_header" />

    <TextView
        android:id="@+id/overview_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:text="@string/overview_txt"
        app:layout_constraintTop_toBottomOf="@id/overview_header" />


</androidx.constraintlayout.widget.ConstraintLayout>