<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eightbitlab.com.blurview.BlurView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_blurView"
        app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
        app:layout_constraintStart_toStartOf="@id/movie_poster"
        app:layout_constraintEnd_toEndOf="@id/movie_poster"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/radius_background"
        android:layout_marginStart="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_bg"
            android:padding="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_title"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/movie_title"/>

        </LinearLayout>


    </eightbitlab.com.blurview.BlurView>

    <eightbitlab.com.blurview.BlurView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_blurView"
        app:layout_constraintTop_toTopOf="@id/movie_poster"
        app:layout_constraintEnd_toEndOf="@id/movie_poster"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/radius_background"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imdb_txt"
                android:text="@string/imdb"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/star_ic"
                android:contentDescription="@string/star_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_imdb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imdb_txt" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_rating"
                android:text="@string/rating"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/star_ic"
                app:layout_constraintTop_toTopOf="@+id/star_ic"
                app:layout_constraintBottom_toBottomOf="@id/star_ic"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </eightbitlab.com.blurview.BlurView>




</androidx.constraintlayout.widget.ConstraintLayout>